feat: add update hyperboard endpoint
